Added Offline Realtime update to chatlist

--- a/src/app/components/chat-list/chat-list.component.html
+++ b/src/app/components/chat-list/chat-list.component.html
@@ -4,6 +4,7 @@
 		(click)="selectedUser(user)" 
 		[class.active]="isUserSelected(user.id)">
 			{{ user.username}}
+			<span [ngClass]="user.online === 'Y' ? 'online' : 'offline'"> </span>
 	</li>
 </ul>
 <div class="alert alert-info" *ngIf='chatListUsers.length === 0'>
