Removed socketId dependency and Bug Fix

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,10 +19,10 @@
 
 <main role="main" class="container-fluid">
 	<div class="row">
-		<div class="col-md-3">
+		<div class="col-3">
 			<app-chat-list [conversation]="conversation" [selectedUserInfo]="selectedUserInfo"></app-chat-list>
 		</div>
-		<div class="col-md-8">
+		<div class="col-8">
 			<app-conversation [conversation]="conversation" [selectedUserInfo]="selectedUserInfo"></app-conversation>
 		</div>
 	</div>
