Remed unwanted comments

--- a/Angular Application/src/app/pages/home/chat-list/chat-list.component.html
+++ b/Angular Application/src/app/pages/home/chat-list/chat-list.component.html
@@ -8,5 +8,5 @@
 	</li>
 </ul>
 <div class="alert" alert-info.class="!loading" *ngIf='chatListUsers.length === 0'>
-	{{ loading && chatListUsers.length === 0 ? 'Loading your chat list.' : 'No User Found.'}}
+	{{ loading && chatListUsers.length === 0 ? 'Loading your chat list.' : 'No User Avilable to chat.'}}
 </div>
